@@ -1,7 +1,10 @@
 = CHANGES
 
 == 0.9.29 (Not Yet Released)
+
 * Cleanup SupportLite
+* Cleanup Reloader
+* Cleanup Padrino::Application
 
 == 0.9.28
 
